[project]
name = "task-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Prathamesh Dharmadhikari",email = "dharmadhikari.prathamesh@finiq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "sqlalchemy[asyncio]>=2.0.44,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "pydantic-settings>=2.5.2,<2.6.0",
    "python-dotenv>=1.2.1,<1.3.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "alembic>=1.17.1,<1.18.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
